# ccr

./: .gitignore  .gitmodules  Makefile.am  README.md  configure.ac
cc/: Makefile.am  cc-internal.h  cc.c  cc.h  cc_json.c  cc_mm.c  cc_types.c  cc_xcpf.c
cc/tests/: Makefile  test1.c  test10.ans  test10.c  test11.ans  test11.c  test11.cfg  test12.ans  test12.c  test12.cfg  test13.ans  test13.c  test13.cfg  test14.ans  test14.cfg  test2.c  test3.c  test4.ans  test4.c  test5.ans  test5.c  test6.ans  test6.c  test6.cfg  test7.ans  test7.c  test7.cfg  test8.ans  test8.c  test9.ans  test9.c
ccr/: Makefile.am  ccr.c  ccr.h
ccr/src/: Makefile.am  ccr.c  ccr.h
ccr/tests/: .gitignore  Makefile  test1.c  test10.ans  test10.c  test2.c  test3.ans  test3.c  test4.ans  test4.c  test5.ans  test5.c  test6.ans  test6.c  test7.ans  test7.c  test8.ans  test8.c  test9.ans  test9.c
ccr/util/: Makefile.am  ccr-bulkread-template.c  ccr-pub-kafka.c  ccr-pub-redis.c  ccr-tool.c  modccr-dummy.c  modccr-kafka.c  modccr.h  notes.txt  sconf.c  sconf.h
lib/: Makefile.am
lib/libut_build/: Makefile.am
